# yellow-docs-mcp

./: .gitignore  LICENSE  README.md  claude_mcp_config.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-02-22-yellow-docs-mcp-design.md  2026-02-22-yellow-docs-mcp-plan.md
src/yellow_docs_mcp/: __init__.py  __main__.py  indexer.py  parser.py  search.py  server.py  store.py  telemetry.py
tests/: test_indexer.py  test_integration.py  test_live_smoke.py  test_parser.py  test_search.py  test_server.py  test_store.py
