[project]
name = "yellow-docs-mcp"
version = "0.1.0"
description = "MCP server for Yellow Network documentation"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "sentence-transformers>=2.2",
    "rank-bm25>=0.2",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "gitpython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
